--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     alt=""
                   /></a>
                   <div class="portfolio__single-section__overlay">
-                    <a href="https://felixzavala.com/assets/img/eternalfit-email-preview-min.png" target="blank"><div class="overlay-content">
+                    <a href="https://felixzavala.com/emailtemplate.html" target="blank"><div class="overlay-content">
                       <h4>HTML EMAIL</h4>
                
                     </div>
