--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                   />
                   <div class="portfolio__single-section__overlay">
                     <a href="https://www.bjjrobot.com" target="blank"><div class="overlay-content">
-                      <h4>RESPONSIVE WEBPAGE </h4>
+                      <h4>SHOPIFY ECOMMERCE WEBPAGE </h4>
                      
                     </div>
                     <div class="portfolio__single-section__search-icon">
