--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               
               <div class="col-md-8 about__content">
                 <p class="about__description">
-                  I'm a digital developer with a strong graphic design background and 2 years of web development experience. I have been working on email development for the past year, and have been coding in HTML and JavaScript for over 6 years. I'm looking for a well-rounded opportunity to grow with the company and to continue working from home in Dallas, Texas.
+                  I'm a digital developer with a strong graphic design background and 3 years of web development experience. I have been working on email development for the past year, and have been coding in HTML/CSS and JavaScript for over 6 years. I'm looking for a well-rounded opportunity to grow with the company and to continue working from home in Dallas, Texas.
 
                 </p>
        
