--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                
                     </div>
                     <div class="portfolio__single-section__search-icon">
-                      <a href="https://felixzavala.com/assets/img/eternalfit-email-preview-min.png" target="blank"><img class="click" src="assets/img/tap.png" alt=""
+                      <a href="https://felixzavala.com/emailtemplate.html" target="blank"><img class="click" src="assets/img/tap.png" alt=""
                       /></a></a>
                     </div>
                   </div>
