--- a/emailtemp2.html
+++ b/emailtemp2.html
@@ -6,7 +6,7 @@
     <!--[if !mso]><!-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <!--<![endif]-->
-    <title>BJJ ROBOT</title>
+    <title>Game Store</title>
     <!--[if mso]>
     <style>
       body,html,th,a,span {
@@ -671,7 +671,7 @@
                                         <tbody>
                                           <tr>
                                             <th align="left" class="logo" style="width:100%;font-family:Roboto, sans-serif;color:#4c4c4c;font-size:30px;font-weight:400;" valign="middle" width="100%">
-                                              <a href="#" name="logo" target="_blank"><img alt="Game Store Power Assist Bicycles" border="0" height="52" src="Game-Store-WH-Logo-Purple-White-min.avif" style="display: block; width: 150px;" title="Game Store Power Assist Bicycles" width="150"></a>
+                                              <a href="#" name="logo" target="_blank"><img alt="Game Store Logo" border="0" height="52" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/gamestore-logo-.jpg" style="display: block; width: 150px;" title="Game Store Logo" width="150"></a>
                                             </th>
                                           </tr>
                                         </tbody>
@@ -703,7 +703,7 @@
                                                               <table align="center" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width:100%;">
                                                                 <tr>
                                                                   <th align="center">
-                                                                    <a href="#" name="findRetailer_img" style="text-decoration:none;color:#ffffff;" target="_blank"><img border="0" height="20" src="store_locator-icon.png" style="display: block; width: 15px; height: 20px;" width="15" alt="5b6151b1-7464-44c8-9e90-f72039ddf16c.png"></a>
+                                                                    <a href="#" name="findRetailer_img" style="text-decoration:none;color:#ffffff;" target="_blank"><img border="0" height="20" src="https://felixzavala.com/img/store_locator-icon.png" style="display: block; width: 15px; height: 20px;" width="15" alt="Store Locator Icon"></a>
                                                                   </th>
                                                                 </tr>
                                                               </table>
@@ -718,7 +718,7 @@
                                             </th>
                                             <!--[if !mso]><!-->
                                             <th align="right" class="show" style="display:none;visibility:hidden;vertical-align:middle;">
-                                              <a href="#" name="findRetailer_link_mobile" style="text-decoration:none;" target="_blank"><img border="0" height="38" src="store_locator-icon.png" width="28" style="display: block; width: 29px; height: 39px;" alt="d998bbf6-a725-46f4-80ab-8461f165bf07.png"></a>
+                                              <a href="#" name="findRetailer_link_mobile" style="text-decoration:none;" target="_blank"><img border="0" height="38" src="store_locator-icon.png" width="28" style="display: block; width: 29px; height: 39px;" alt="Store Locator Icon"></a>
                                             </th>
                                             <!--<![endif]-->
                                           </tr>
@@ -755,10 +755,10 @@
                                                   <th align="center" width="100%" style="width:100%;padding-bottom:40px;" mc:edit="bg_hero_section">
                                                     <table align="center" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width:100%;">
                                                       <tr>
-                                                        <th background="http://127.0.0.1:5500/robot/PC_Accessories.jpg" bgcolor="#ffffff" style="background-position:center;background-size:cover;background-repeat:no-repeat;width:640px;height:427px;vertical-align:top;">
+                                                        <th background="https://felixzavala.com/img/PC_Accessories-.jpg" bgcolor="#ffffff" style="background-position:center;background-size:cover;background-repeat:no-repeat;width:640px;height:427px;vertical-align:top;">
                                                           <!--[if gte mso 9]>
                                                           <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:640; height:auto;">
-                                                            <v:fill type="frame" src="http://127.0.0.1:5500/robot/PC_Accessories.jpg" color="#ffffff" />
+                                                            <v:fill type="frame" src="https://felixzavala.com/img/PC_Accessories-.jpg" color="#ffffff" />
                                                             <v:textbox style="v-text-align: middle" inset="0,0,0,0">
                                                               <![endif]-->
                                                           <div>
@@ -811,7 +811,7 @@
                                                                 <table align="center" border="0" cellpadding="0" cellspacing="0" style="width:100%;" width="100%">
                                                                   <tbody>
                                                                     <tr>
-                                                                      <th align="center"><img border="0" height="275" src="KOTION-EACH-G4000-Pro-Gaming-Headphones-Earphone-with-Microphone-LED-Light-Headset-Stereo-Surround-Headband-for.jpg" width="275" style="display: block; max-width: 275px;" alt="3f62f6ca-ca41-444b-b2ff-49b4f07e2311.jpg" mc:edit="2upimage_1">
+                                                                      <th align="center"><img border="0" height="275" src="https://felixzavala.com/img/gaming-headset-.jpg" width="275" style="display: block; max-width: 275px;" alt="3f62f6ca-ca41-444b-b2ff-49b4f07e2311.jpg" mc:edit="2upimage_1">
                                                                       </th>
                                                                     </tr>
                                                                     <tr>
@@ -837,7 +837,7 @@
                                                                       <table align="center" border="0" cellpadding="0" cellspacing="0" style="width:100%;" width="100%">
                                                                         <tbody>
                                                                           <tr>
-                                                                            <th align="center"><img border="0" height="275" src="RGB-Gaming-Headset-Stand-USB-Pickup-Desktop-Computer-Headset-Display-Holder-Headset-Holder-Hanger-Base-For.jpg_Q90.jpg_.webp" width="275" style="display: block; max-width: 275px;" alt="59abbd87-5777-4645-8133-6b9b680b3ef9.jpg" mc:edit="2upimage_2">
+                                                                            <th align="center"><img border="0" height="275" src="https://felixzavala.com/img/RGB-Gaming-Headset-Stand-.jpg" width="275" style="display: block; max-width: 275px;" alt="59abbd87-5777-4645-8133-6b9b680b3ef9.jpg" mc:edit="2upimage_2">
                                                                             </th>
                                                                           </tr>
                                                                           <tr>
@@ -902,7 +902,7 @@
                                                                       <table align="center" border="0" cellpadding="0" cellspacing="0" style="width:100%;" width="100%">
                                                                         <tbody>
                                                                           <tr>
-                                                                            <th align="center"><img border="0" height="275" src="REDRAGON-Fizz-K617-RGB-USB-Mini-Mechanical-Gaming-Keyboard-Red-Switch-61-Keys-Wired-detachable-cable.webp" width="275" style="display: block; max-width: 275px;" alt="59abbd87-5777-4645-8133-6b9b680b3ef9.jpg" mc:edit="2upimage_2">
+                                                                            <th align="center"><img border="0" height="275" src="https://felixzavala.com/img/RGB-Gaming-KB-.jpg" width="275" style="display: block; max-width: 275px;" alt="59abbd87-5777-4645-8133-6b9b680b3ef9.jpg" mc:edit="2upimage_2">
                                                                             </th>
                                                                           </tr>
                                                                           <tr>
@@ -982,7 +982,7 @@
                                                                                               <th align="center" width="100%" style="width:100%;">
                                                                                                 <table align="center" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width:100%;">
                                                                                                   <tr>
-                                                                                                    <th align="center" class="hero" style="width:100%;" width="100%"><a href="#"><img border="0" height="360" src="Oculus-Play-min.jpg" style="display: block; max-width: 640px;" width="640" alt="1c03be47-1de6-4bbf-9c25-f2a2b0a4c3b8.jpg" mc:edit="video_image_1"></a>
+                                                                                                    <th align="center" class="hero" style="width:100%;" width="100%"><a href="#"><img border="0" height="360" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/98134ba4d3a8b4f4b3eb33679721b97dc1974d8f/img/Oculus-Play-min.jpg" style="display: block; max-width: 640px;" width="640" alt="1c03be47-1de6-4bbf-9c25-f2a2b0a4c3b8.jpg" mc:edit="video_image_1"></a>
                                                                                                     </th>
                                                                                                   </tr>
                                                                                                   <tr>
@@ -1075,7 +1075,7 @@
                                                                                                     <tbody>
                                                                                                       <tr>
                                                                                                         <th align="center" class="logoFooter" style="width:100%;" width="100%">
-                                                                                                          <a href="#" name="Logo_2" target="_blank"><img border="0" height="67" src="Game-Store-WH-Logo-Purple-White-min.avif" width="195" alt="0c03bee8-eaba-4efb-b9a8-080ee1e75957.png"></a>
+                                                                                                          <a href="#" name="Logo_2" target="_blank"><img border="0" height="67" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/gamestore-logo-.jpg" width="195" alt="Game Store Logo"></a>
                                                                                                         </th>
                                                                                                       </tr>
                                                                                                     </tbody>
