--- a/emailtemp2.html
+++ b/emailtemp2.html
@@ -671,7 +671,7 @@
                                         <tbody>
                                           <tr>
                                             <th align="left" class="logo" style="width:100%;font-family:Roboto, sans-serif;color:#4c4c4c;font-size:30px;font-weight:400;" valign="middle" width="100%">
-                                              <a href="#" name="logo" target="_blank"><img alt="Game Store Logo" border="0" height="52" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/gamestore-logo-.jpg" style="display: block; width: 150px;" title="Game Store Logo" width="150"></a>
+                                              <a href="#" name="logo" target="_blank"><img alt="Game Store Logo" border="0" height="52" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/Game-Store-Logo-min.png" style="display: block; width: 150px;" title="Game Store Logo" width="150"></a>
                                             </th>
                                           </tr>
                                         </tbody>
@@ -1075,7 +1075,7 @@
                                                                                                     <tbody>
                                                                                                       <tr>
                                                                                                         <th align="center" class="logoFooter" style="width:100%;" width="100%">
-                                                                                                          <a href="#" name="Logo_2" target="_blank"><img border="0" height="67" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/gamestore-logo-.jpg" width="195" alt="Game Store Logo"></a>
+                                                                                                          <a href="#" name="Logo_2" target="_blank"><img border="0" height="67" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/Game-Store-Logo-min.png" width="195" alt="Game Store Logo"></a>
                                                                                                         </th>
                                                                                                       </tr>
                                                                                                     </tbody>
