--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 >
                   <img
                     class="portfolio__single-section__image img-responsive"
-                    src="https://felixzavala.com/img/shop-site-min.jpg"
+                    src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/shop-site-min.jpg"
                     alt=""
                   />
                   <div class="portfolio__single-section__overlay">
@@ -244,7 +244,7 @@
                 >
                 <a href="https://felixzavala.com/emailtemp2.html" target="blank"><img
                     class="portfolio__single-section__image img-responsive"
-                    src="https://felixzavala.com//img/HTML-email-min.jpg"
+                    src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/HTML-email-min.jpg"
                     alt=""
                   /></a>
                   <div class="portfolio__single-section__overlay">
