--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -175,7 +175,7 @@
 						<th align="center" border="0" style="padding: 0px; padding-bottom: 40px; width: 100%;" width="100%">
 						<table align="center" border="0" cellpadding="0" cellspacing="0" class="mobile" role="presentation" style="width: 100%;" width="100%"><!-- START: MODULE: FULL WIDTH IMAGE (full-width-image) -->
 								<tr>
-									<th align="center" border="0" class="hero" style="padding: 0px; padding-top: 0px; width: 100%; background-color: #e6e6e6;" width="100%"><a href="#" name="1up1_image" target="_blank" xt="SPCLICK"><img alt="" border="0" height="" name="Cont_2" src="https://felixzavala.com/assets/img/nextstep-min.jpg" style="display: block; margin: 0 auto; border-radius: 60px 60px 0px 0px; " width="640" /></a></th>
+									<th align="center" border="0" class="hero" style="padding: 0px; padding-top: 0px; width: 100%; background-color: #ffffff" width="100%"><a href="#" name="1up1_image" target="_blank" xt="SPCLICK"><img alt="" border="0" height="" name="Cont_2" src="https://felixzavala.com/assets/img/nextstep-min.jpg" style="display: block; margin: 0 auto;" width="640" /></a></th>
 								</tr>
 								<!-- END: MODULE: FULL WIDTH IMAGE (full-width-image) --><!-- START: TEXT BLOCK WITH BUTTON (txt-block-btn-color) -->
 								<tr>
@@ -224,7 +224,7 @@
 															<table align="center" border="0" cellpadding="0" cellspacing="0" class="mobile" role="presentation" style="width: 100%;" width="100%">
 																<tbody>
 																	<tr>
-																		<th align="center" border="0" style="padding: 0px; width: 100%;" width="100%"><a border="0" href="#" name="2up4_1_image" target="_blank" xt="SPCLICK"><img alt="" border=""  height="" name="Cont_4" src="https://felixzavala.com/assets/img/homeworkout-min.jpg" style="display: block; margin: 0 auto; border-color: #ffffff; border-width: 3px; border-radius: 20px; border-style: solid;" width="245" /></a></th>
+																		<th align="center" border="0" style="padding: 0px; width: 100%;" width="100%"><a border="0" href="#" name="2up4_1_image" target="_blank" xt="SPCLICK"><img alt="" border=""  height="" name="Cont_4" src="https://felixzavala.com/assets/img/homeworkout-min.jpg" style="display: block; margin: 0 auto; border-color: #ffffff; border-width: 2px; border-radius: 10px; border-style: solid;" width="245" /></a></th>
 																	</tr>
 																</tbody>
 															</table>
@@ -242,9 +242,9 @@
 																						<tbody>
 																							<tr>
 																								<th align="center" border="0" class="m-pad-t--30" style="padding: 0px; width: 100%;" width="100%">
-																								<h2 class="txt--h2" style="color: #ffffff; font-family: 'museo-sans', Arial, sans-serif; font-size: 26px; font-weight: bold; font-weight: 700; line-height: 1.23; margin: 0px; text-align: left; mso-line-height-alt: 32px;">Upgrade Your Workout</h2>
+																								<h2 class="txt--h2" style="color: #ffffff; font-family: 'museo-sans', Arial, sans-serif; font-size: 24px; font-weight: bold; font-weight: 700; line-height: 1.23; margin: 0px; text-align: left; mso-line-height-alt: 32px;">Upgrade Your Workout</h2>
 
-																								<p class="txt--body" style="color: #ffffff; font-family: 'proxima-nova', Arial, sans-serif; font-size: 17px; font-weight: normal; font-weight: 300; line-height: 1.41; margin: 0px; margin-top: 15px; text-align: left; mso-line-height-alt: 24px;">Regardless of your fitness goals, we have the tips from the experts to take your workouts to the next level!
+																								<p class="txt--body" style="color: #ffffff; font-family: 'proxima-nova', Arial, sans-serif; font-size: 17px; font-weight: normal; font-weight: 300; line-height: 1.41; margin: 0px; margin-top: 10px; text-align: left; mso-line-height-alt: 24px;">We have the tips from the experts to take your workouts to the next level!
 
 																								</p>
 																								</th>
@@ -289,7 +289,7 @@
 										<tbody>
 											<tr>
 												<th align="center" border="0" style="padding: 0px; width: 100%;" width="100%">
-													<h2 class="txt--h1" style="color: #1a1a1a; font-family: 'museo-sans', Arial, sans-serif; font-size: 36px; font-weight: bold; font-weight: 700; line-height: 1.17; margin: 0px; text-align: left; mso-line-height-alt: 35px; text-decoration:none;">Athlete Spotlight</h2>
+													<h2 class="txt--h1" style="color: #1a1a1a; font-family: 'museo-sans', Arial, sans-serif; font-size: 36px; font-weight: bold; font-weight: 700; line-height: 1.17; margin: 0px; text-align: Center; mso-line-height-alt: 35px; text-decoration:none;">Athlete Spotlight</h2>
 
 												<p class="txt--body" style="color: #1a1a1a; font-family: 'proxima-nova', Arial, sans-serif; font-size: 17px; font-weight: normal; font-weight: 300; line-height: 1.41; margin: 0px; margin-top: 20px; text-align: left; mso-line-height-alt: 24px;">Every week we choose 2 athletes who have made a significant contribution to their sport and is deserving of recognition. We will be highlighting athletes from all levels and disciplines, including high school, college, professional, and Olympic level athletes.</p>
 												</th>
@@ -395,11 +395,7 @@
 									</th>
 								</tr>
 								<!-- END: MODULE - 2-UP WITH IMAGES (2up) -->
-								<!-- START: MODULE: FULL WIDTH BANNER -->
-								<tr>
-									<th align="center" border="0" class="hero" style="padding: 0px; padding-top: 50px; width: 100%;" width="100%"><a href="#" name="1up1_image" target="_blank" xt="SPCLICK"><img alt="" border="0" height="" name="Cont_2" src="https://felixzavala.com/assets/img/fitbanner-min.jpg" style="display: block; margin: 0 auto;" width="640" /></a></th>
-								</tr>
-								<!-- END: MODULE: FULL WIDTH BANNER -->
+							
 							</tbody>
 						</table>
 						</th>
