--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 >
                   <img
                     class="portfolio__single-section__image img-responsive"
-                    src="img/cardio_thumb.jpg"
+                    src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/729f0753a2c85008e5da21cd06c6c3a02f5dd322/img/cardio_thumb.jpg"
                     alt=""
                   />
                   <div class="portfolio__single-section__overlay">
