--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" type="image/jpg" href="https://felixzavala.com/assets/img/fboxlogowhite.png"/>
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
