--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><img class="logo" src="img//fxlogo.png"></a>
+	      <a class="navbar-brand" href="index.html"><img class="logo" src="img/fxlogo.png"></a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -51,7 +51,7 @@
 		<div class="container mt-5">
 			<div class="row">
 				<div class="col-lg-6 pt-5 mt-5">
-					<img class="w-75 shadow x-5" src="img//about-me-pic1.png" />
+					<img class="w-75 shadow x-5" src="img/about-me-pic1.png" />
 				  </div>
 			  <div class="col-lg-6">
 					<div class="text mt-5 ftco-animate mb-5">
