--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<div class="col-md-6 col-lg-5 d-flex">
 				<div class="img-about img d-flex align-items-stretch">
 					<div class="overlay"></div>
-					<div class="img img-contain d-flex align-self-stretch align-items-center" style="background-image:url(images/Hero-About-Me-900x987.png);">
+					<div class="img img-contain d-flex align-self-stretch align-items-center" style="background-image:url(img/Hero-About-Me-900x987.png);">
 					</div>
 				</div>
 			</div>
@@ -163,7 +163,7 @@
     				</div>
   				</div>
   				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/HTML-email-min.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/HTML-email-min.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 							
@@ -174,7 +174,7 @@
   				</div>
 
     			<div class="col-md-12 mt-5">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/bjjrobot_site.png);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/bjjrobot_site.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://www.bjjrobot.com/" target="_blank">Website Design</a></h3>
