--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
 	<section class="pb-5 mb-6">
 		<div class="container mt-5">
 			<div class="row">
-				<div class="col-lg-6 pt-5 mt-5">
-					<img class="w-75 shadow x-5" src="img/about-me-pic1.png" />
-				  </div>
+				
 			  <div class="col-lg-6">
 					<div class="text mt-5 ftco-animate mb-5">
 		          		<p class="subheading-blue">HOLA!</p>
 			            <h1 class="mb-4 hero-heading">I'm <span class="primary-blue">Felix</span></h1>
 			            <h2 class="mb-4">Web & Email Developer</h2>
+						
 			
 		            </div>
 			  </div>
@@ -148,7 +147,7 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">My Projects</h2>
+            <h2 class="mb-4">Recent Projects</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
