--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Felix Zavala</span></li>
 		            	<li class="d-flex"><span>Birthday:</span> <span>April 11th</span></li>
-		            	<li class="d-flex"><span>Location:</span> <span>Grand Prairie TX USA</span></li>
+		            	<li class="d-flex"><span>Location:</span> <span>Dallas, TX USA</span></li>
 		            
 		            </ul>
 		          </div>
