--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 	<section class="pb-5 mb-6">
 		<div class="container mt-5">
 			<div class="row">
-				
-			  <div class="col-lg-6">
-					<div class="text mt-5 ftco-animate mb-5">
+			
+			  <div class="col-md-12">
+					<div class="text mt-5 ftco-animate mb-5 text-align justify-content-start">
 		          		<p class="subheading-blue">HOLA!</p>
 			            <h1 class="mb-4 hero-heading">I'm <span class="primary-blue">Felix</span></h1>
 			            <h2 class="mb-4">Web & Email Developer</h2>
@@ -96,7 +96,7 @@
 			<div class="col-md-6 col-lg-5 d-flex">
 				<div class="img-about img d-flex align-items-stretch">
 					<div class="overlay"></div>
-					<div class="img img-contain d-flex align-self-stretch align-items-center" style="background-image:url(img/Hero-About-Me-900x987.png);">
+					<div class="img img-contain d-flex align-self-stretch align-items-center" style="background-image:url(img/CG-Me.png);">
 					</div>
 				</div>
 			</div>
