--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
         </div>
     		<div class="row">
     			<div class="col-md-6">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center w-100" style="background-image: url(img/World-Fighter-Logo1.gif);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center w-100" style="background-image: url(img/mmatimesimage.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-							<h3><a href="https://felixzavala.com/World-Fighter-Logo1.gif" target="_blank">Animated GIF</h3>
+							<h3><a href="https://felixzavala.com/emailtemplate3.html" target="_blank">HTML Email</h3>
 	    					<span>2023</span></a>
 	    				</div>
     				</div>
@@ -195,6 +195,8 @@
 
     			
     			</div>
+
+		
     		
     		</div>
     	</div>
