--- a/emailtemplate3.html
+++ b/emailtemplate3.html
@@ -261,7 +261,7 @@
                           <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                             <tr>
                              <!-- logo -->
-                              <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="b.robot-black-belt-logo.png" border="0" style="display:block; margin:0px auto; max-width:200px !important;" width="200" height="" alt="AltTextHere"></a>
+                              <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="img/b.robot-black-belt-logo.png" border="0" style="display:block; margin:0px auto; max-width:200px !important;" width="200" height="" alt="AltTextHere"></a>
                               </th>
                             </tr>
                           </table>
@@ -292,7 +292,7 @@
                           <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                             <tr>
                               <!-- image -->
-                              <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/the-rise-of-brazilian-jiu-jitsu-a-comprehensive-study-of-its-history-and-origins" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="riseofBJJ.png" border="0" style="display:block; margin:0px auto; max-width:600px !important;" width="600" height="" alt="AltTextHere"></a>
+                              <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/the-rise-of-brazilian-jiu-jitsu-a-comprehensive-study-of-its-history-and-origins" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/riseofBJJ.png" border="0" style="display:block; margin:0px auto; max-width:600px !important;" width="600" height="" alt="AltTextHere"></a>
                               </th>
                             </tr>
                           </table>
@@ -434,7 +434,7 @@
                                       <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                         <!-- image -->
                                         <tr>
-                                          <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/the-ultimate-guide-to-bjj-rash-guards-benefits-types-and-choosing-the-right-one" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="ultimateguide.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
+                                          <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/the-ultimate-guide-to-bjj-rash-guards-benefits-types-and-choosing-the-right-one" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/ultimateguide.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
                                           </th>
                                         </tr>
                                       </table>
@@ -490,7 +490,7 @@
                                       <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                         <!-- image -->
                                         <tr>
-                                          <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/what-is-a-rash-guard-for-bjj" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="whatisabjjrashguard.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
+                                          <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/what-is-a-rash-guard-for-bjj" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/whatisabjjrashguard.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
                                           </th>
                                         </tr>
                                       </table>
@@ -557,7 +557,7 @@
                           <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                             <!-- logo -->
                             <tr>
-                              <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/" target="_blank" style="" name="Footer_LogoName_image" alias="Footer_LogoName_image"><img class="m-width--100p" src="b.robot-black-belt-logo.png" border="0" style="display:block; margin:0px auto; max-width:150px !important;" width="150" height="" alt="AltTextHere"></a>
+                              <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/" target="_blank" style="" name="Footer_LogoName_image" alias="Footer_LogoName_image"><img class="m-width--100p" src="img/b.robot-black-belt-logo.png" border="0" style="display:block; margin:0px auto; max-width:150px !important;" width="150" height="" alt="AltTextHere"></a>
                               </th>
                             </tr>
                             <!-- text -->
