--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<div class="col-md-4 text-center d-flex ftco-animate">
 				<span class="services-1">
 					<span class="icon">
-						<i class="flaticon-analysis"></i>
+						<i class="icon-web"></i>
 					</span>
 					<div class="desc">
 						<h3 class="mb-1">Web Design</h3>
@@ -115,7 +115,7 @@
 			<div class="col-md-4 text-center d-flex ftco-animate">
 				<span class="services-1">
 					<span class="icon">
-						<i class="flaticon-flasks"></i>
+						<i class="icon-mail_outline"></i>
 					</span>
 					<div class="desc">
 						<h3 class="mb-5">Email Developer</h3>
@@ -125,7 +125,7 @@
 			<div class="col-md-4 text-center d-flex ftco-animate">
 				<span class="services-1">
 					<span class="icon">
-						<i class="flaticon-ideas"></i>
+						<i class="icon-code"></i>
 					</span>
 					<div class="desc">
 						<h3 class="mb-5">Web Developer</h3>
@@ -189,7 +189,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://www.bjjrobot.com/" target="_blank">Website Design</h3>
-	    					<span>2023</span></a>
+	    					<span>E-Commerce Shopify Website </span></a>
 	    				</div>
     				</div>
 
