--- a/index.html
+++ b/index.html
@@ -45,25 +45,46 @@
 	  </nav>
 
 
-
-
-	<section class="pb-5 mb-6">
-		<div class="container mt-5">
-			<div class="row">
-			
-			  <div class="col-md-12">
-					<div class="text mt-5 ftco-animate mb-5 text-align justify-content-start">
-		          		<p class="subheading-blue">HOLA!</p>
-			            <h1 class="mb-4 hero-heading">I'm <span class="primary-blue">Felix</span></h1>
-			            <h2 class="mb-4">Web & Email Developer</h2>
-						
-			
-		            </div>
+	  <section id="home-section" class="hero">
+		<div class="home-slider  owl-carousel">
+		<div class="slider-item ">
+			<div class="overlay"></div>
+		  <div class="container">
+			<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+				<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+					<div class="overlay"></div>
+				</div>
+				<div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+					<div class="text">
+						<span class="subheading">Hola!</span>
+					  <h1 class="mb-4 mt-3">I'm <span>Felix Zavala</span></h1>
+					  <h2 class="mb-4">Email and Web Developer</h2>
+					  <p><a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My work</a></p>
+				  </div>
+				</div>
 			  </div>
-			 
 		  </div>
-  </section>
+		</div>
 
+		<div class="slider-item">
+			<div class="overlay"></div>
+		  <div class="container">
+			<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+				<div class="img img-contain d-flex align-self-stretch align-items-center" style="background-image:url(img/CG-Me.png);">
+					<div class="overlay"></div>
+				</div>
+				<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+					<div class="text">
+						<span class="subheading">Hello!</span>
+					  <h1 class="mb-4 mt-3">I'm a <span>web designer</span> based in Texas</h1>
+					  <p><a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My work</a></p>
+				  </div>
+				</div>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+  </section>
 
 
 
@@ -105,22 +126,12 @@
 			<div class="col-md-4 text-center d-flex ftco-animate">
 				<span class="services-1">
 					<span class="icon">
-						<i class="icon-web"></i>
+						<i class="icon-envelope-o"></i>
 					</span>
 					<div class="desc">
-						<h3 class="mb-1">Web Design</h3>
+						<h3 class="mb-1">HTML Email Developer</h3>
 					</div>
 				</a>
-			</div>
-			<div class="col-md-4 text-center d-flex ftco-animate">
-				<span class="services-1">
-					<span class="icon">
-						<i class="icon-mail_outline"></i>
-					</span>
-					<div class="desc">
-						<h3 class="mb-5">Email Developer</h3>
-					</div>
-				</span>
 			</div>
 			<div class="col-md-4 text-center d-flex ftco-animate">
 				<span class="services-1">
@@ -129,6 +140,16 @@
 					</span>
 					<div class="desc">
 						<h3 class="mb-5">Web Developer</h3>
+					</div>
+				</span>
+			</div>
+			<div class="col-md-4 text-center d-flex ftco-animate">
+				<span class="services-1">
+					<span class="icon">
+						<i class="icon-laptop"></i>
+					</span>
+					<div class="desc">
+						<h3 class="mb-5">Web Design</h3>
 					</div>
 				</spam>
 			</div>
@@ -189,7 +210,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://www.bjjrobot.com/" target="_blank">Website Design</h3>
-	    					<span>E-Commerce Shopify Website </span></a>
+	    					<span>E-Commerce Shopify Website that I helped build. I was the lead developer and created most of the images.</span></a>
 	    				</div>
     				</div>
 
