--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<span class="subheading">Hola!</span>
 					  <h1 class="mb-4 mt-3">I'm <span>Felix Zavala</span></h1>
 					  <h2 class="mb-4">Email and Web Developer</h2>
-					  <p><a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My work</a></p>
+					  <p><a href="mailto:jfelixzavala10@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> &nbsp; <a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My work</a></p>
 				  </div>
 				</div>
 			  </div>
@@ -77,7 +77,7 @@
 					<div class="text">
 						<span class="subheading">Hello!</span>
 					  <h1 class="mb-4 mt-3">I'm a <span>web designer</span> based in Texas</h1>
-					  <p><a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My work</a></p>
+					  <p><a href="mailto:jfelixzavala10@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> &nbsp; <a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My work</a></p>
 				  </div>
 				</div>
 			  </div>
@@ -98,11 +98,8 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>As an experienced web developer with a graphic design background, I have honed my skills in HTML, CSS, and various CMS platforms. My work has ranged from developing custom websites optimized for SEO to creating HTML emails for major brands. I am also proficient in Photoshop and Illustrator for design and Litmus for email testing.
+		            <p>As an experienced web developer with a graphic design background, I have honed my skills in HTML, CSS, and various CMS platforms. My work has ranged from developing custom responsive websites optimized for SEO to creating HTML emails for major brands. I am also experienced with Adobe Creative Cloud, particularly in Photoshop and Illustrator.</p>
 
-
-
-					</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Felix Zavala</span></li>
 		            	<li class="d-flex"><span>Birthday:</span> <span>April 11th</span></li>
@@ -129,7 +126,7 @@
 						<i class="icon-envelope-o"></i>
 					</span>
 					<div class="desc">
-						<h3 class="mb-1">HTML Email Developer</h3>
+						<h3 class="mb-1">Email Development</h3>
 					</div>
 				</a>
 			</div>
@@ -209,8 +206,8 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/bjjrobot_site.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://www.bjjrobot.com/" target="_blank">Website Design</h3>
-	    					<span>E-Commerce Shopify Website that I helped build. I was the lead developer and created most of the images.</span></a>
+	    					<h3><a href="https://www.bjjrobot.com/" target="_blank">Web Design</h3>
+	    					<span>E-Commerce Shopify Website</span></a>
 	    				</div>
     				</div>
 
@@ -224,7 +221,6 @@
     </section>
 
 
-  
 
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
