--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<div class="col-md-6 col-lg-5 d-flex">
 				<div class="img-about img d-flex align-items-stretch">
 					<div class="overlay"></div>
-					<div class="img img-contain d-flex align-self-stretch align-items-center" style="background-image:url(img/Hero-About-Me-glow.png);">
+					<div class="img img-contain d-flex align-self-stretch align-items-center" style="background-image:url(img/Hero-image-arms-crossed-glow-cropped.png);">
 					</div>
 				</div>
 			</div>
@@ -167,7 +167,7 @@
 
 
 
-    			<div class="col-md-8 mt-5">
+    			<div class="col-md-12 mt-5">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/bjjrobot_site.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -179,7 +179,6 @@
     			
     			</div>
 
-		
     		
     		</div>
     	</div>
