--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 						  <div class="page">
 						
 							<div class="imgWrap">
-							  <img class="red" src="/CG-Me-transparent.png">
-							  <img class="green" src="/CG-Me-transparent.png">
-							  <img class="blue" src="/CG-Me-transparent.png">
+							  <img class="red" src="img/CG-Me-transparent.png">
+							  <img class="green" src="img/CG-Me-transparent.png">
+							  <img class="blue" src="img/CG-Me-transparent.png">
 						
 							</div>
 						  </div>
