--- a/index.html
+++ b/index.html
@@ -186,7 +186,18 @@
 
 
 
-    			<div class="col-md-12 mt-5">
+    			<div class="col-md-6 mt-5">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(/img/judostudio-screenshot.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="https://felixzavala.com/judostudio/index.html" target="_blank">Business Website</h3>
+	    					<span>This is an website that I developed as a demo for a martial arts gym.</span></a>
+	    				</div>
+    				</div>
+
+    			
+    			</div>
+				<div class="col-md-6 mt-5">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/bjjrobot_site.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
