--- a/judostudio/index.html
+++ b/judostudio/index.html
@@ -470,10 +470,10 @@
             
           </div>
             <p>
-              Copyright &copy; The Judo Studio 2022 
+              Copyright &copy; The Judo Studio <script>document.write(new Date().getFullYear())</script>
             </p>
 
-            <!-- You shall support us a little via PayPal to info@templatemo.com -->
+         
           </div>
         </div>
       </div>
