--- a/emailtemplate3.html
+++ b/emailtemplate3.html
@@ -24,9 +24,6 @@
   <!-- ## Assistive Technology and Browser Tabs ## -->
   <title>MMA Times</title>
 
-  <!-- ## Modular Template Version: v[YYYYMMDD.1-bi] ## -->
-  <!-- ## Email Build Version [edit]: v[YYYYMMDD.1-bi] ## -->
-
   <!-- ## Fonts ## -->
   <!-- link: loads as code loads (preferred); import: loads after page loads -->
   <!--[if !mso]><!-->
@@ -292,7 +289,7 @@
                           <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                             <tr>
                               <!-- image -->
-                              <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/the-rise-of-brazilian-jiu-jitsu-a-comprehensive-study-of-its-history-and-origins" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/riseofBJJ.png" border="0" style="display:block; margin:0px auto; max-width:600px !important;" width="600" height="" alt="AltTextHere"></a>
+                              <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/the-rise-of-brazilian-jiu-jitsu-a-comprehensive-study-of-its-history-and-origins" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/riseofBJJ.png" border="0" style="display:block; margin:0px auto; max-width:600px !important;" width="600" height="" alt="The History & Rise of BJJ Blog Title"></a>
                               </th>
                             </tr>
                           </table>
@@ -311,7 +308,7 @@
                         <!-- horizontal spacing/background color -->
                         <th class="m-pad-lr--20" width="100%" align="center" border="0" style="width: 100%; padding: 20px; mso-line-height-rule: exactly; background-color: #FFFFFF;">
                           <!-- h1/paragraph/h3 -->
-                          <h1 class="m-text--h1" style="padding: 0px; margin: 0; font-family: 'Roboto', Arial, sans-serif; font-size: 36px; font-weight: bold; font-weight: 700; color: #000000; mso-line-height-alt: 36px; line-height: 1.0; letter-spacing: normal; text-align: center;">Discover the history & rise of BJJ</h1>
+                          <h1 class="m-text--h1" style="padding: 0px; margin: 0; font-family: 'Roboto', Arial, sans-serif; font-size: 36px; font-weight: bold; font-weight: 700; color: #000000; mso-line-height-alt: 36px; line-height: 1.0; letter-spacing: normal; text-align: center;">The History & Rise of BJJ</h1>
                           <p class="m-text--p" style="padding: 0px; margin: 0; margin-top: 20px; font-family: 'Roboto', Arial, sans-serif; font-size: 16px; font-weight: normal; font-weight: 400; color: #041727; mso-line-height-alt: 23px; line-height: 1.4; letter-spacing: normal; text-align: left; width: 92%;">Brazilian Jiu-Jitsu (BJJ) is a martial art that has grown in popularity around the world in recent years. Its roots can be traced back to the late 19th century in Brazil, where it was developed by the Gracie family. This article aims to provide a comprehensive and detailed history of the origins and development of BJJ, from its earliest beginnings to its current status as a global phenomenon.</p>
 
                           
@@ -434,7 +431,7 @@
                                       <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                         <!-- image -->
                                         <tr>
-                                          <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/the-ultimate-guide-to-bjj-rash-guards-benefits-types-and-choosing-the-right-one" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/ultimateguide.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
+                                          <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/the-ultimate-guide-to-bjj-rash-guards-benefits-types-and-choosing-the-right-one" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/ultimateguide.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="The Ultimate Guide to BJJ Rash Guards Blog Cover"></a>
                                           </th>
                                         </tr>
                                       </table>
@@ -490,7 +487,7 @@
                                       <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                         <!-- image -->
                                         <tr>
-                                          <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/what-is-a-rash-guard-for-bjj" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/whatisabjjrashguard.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
+                                          <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="https://www.bjjrobot.com/blogs/news/what-is-a-rash-guard-for-bjj" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/whatisabjjrashguard.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="What is a BJJ Rash Guard? Blog Post"></a>
                                           </th>
                                         </tr>
                                       </table>
@@ -734,7 +731,7 @@
                   
                                 <p class="m-text--p" style="padding: 0px; margin: 0; margin-top: 10px; font-family: 'Roboto', Arial, sans-serif; font-size: 11px; font-weight: normal; font-weight: 400; color: #616D77; mso-line-height-alt: 16px; line-height: 1.4; letter-spacing: normal; text-align: left;">Stay up-to-date on the latest in the world of martial arts with B.Robot - your go-to source for news, insights, and analysis. Our mission is to keep you informed and inspired, whether you're a seasoned practitioner or simply a curious fan. Thanks for reading!</p>
                                 <p class="m-text--p" style="padding: 0px; margin: 0; margin-top: 10px; font-family: 'Roboto', Arial, sans-serif; font-size: 11px; font-weight: normal; font-weight: 400; color: #616D77; mso-line-height-alt: 16px; line-height: 1.4; letter-spacing: normal; text-align: center;"><a href="#SPCUSTOMOPTOUT" target="_blank" style="text-decoration: underline; color: #000000;" name="Footer_Unsubscribe_link" alias="Footer_Unsubscribe_link">Unsubscribe</a></p>
-                                <p class="m-text--p" style="padding: 0px; margin: 0; margin-top: 10px; font-family: 'Roboto', Arial, sans-serif; font-size: 11px; font-weight: normal; font-weight: 400; color: #616D77; mso-line-height-alt: 16px; line-height: 1.4; letter-spacing: normal; text-align: center;">&copy;&nbsp;%%FORMAT(MAILING_SEND_DATE, &quot;YYYY&quot;)%%&nbsp;. All rights reserved.</p>
+                                <p class="m-text--p" style="padding: 0px; margin: 0; margin-top: 10px; font-family: 'Roboto', Arial, sans-serif; font-size: 11px; font-weight: normal; font-weight: 400; color: #616D77; mso-line-height-alt: 16px; line-height: 1.4; letter-spacing: normal; text-align: center;">&copy;&nbsp;%%format (MAILING_SEND_DATE, &quot;YYYY&quot;)%%. All rights reserved.</p>
                               </th>
                             </tr>
                           </table>
