--- a/judostudio/index.html
+++ b/judostudio/index.html
@@ -110,19 +110,6 @@
               <p class="p120-left">
                <em>"Our foremost priority is to maintain the integrity of Judo by imparting the techniques and philosophies that guarantee its effectiveness in critical situations. Our training program is both dynamic and efficient, and it equips individuals of all ages with practical self-defense skills. Judo is a versatile martial art that will enhance your overall fitness level while developing a well-rounded set of combat skills. We have spent decades perfecting the effectiveness of Judo as a street self-defense method."</em>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
               </p>   <hr>
             </div></div></section>
 
@@ -240,7 +227,7 @@
         <div class="row">
           <div class="col-lg-6 offset-lg-3">
             <div class="section-heading dark-bg">
-              <h2>Class <em>Schedule</em></h2>
+              <h2 class="text-center">Class <em>Schedule</em></h2>
               <hr>
               <p>
         
@@ -325,7 +312,7 @@
         <div class="row">
           <div class="col-lg-6 offset-lg-3">
             <div class="section-heading">
-              <h2>Our <em>Coaches</em></h2>
+              <h2 class="text-center">Our <em>Coaches</em></h2>
              <hr>
               <p>
           
