--- a/ArasakaEmail.html
+++ b/ArasakaEmail.html
@@ -256,7 +256,7 @@
                                                 <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                     <tr>
                                                      <!-- logo -->
-                                                        <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 15px;mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="Arasaka-Text-Logo.png" border="0" style="display:block; margin:0px auto; max-width:200px !important;" width="200" height="" alt="Arasaka-Text-Logo"></a>
+                                                        <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 15px;mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="img/Arasaka-Text-Logo.png" border="0" style="display:block; margin:0px auto; max-width:200px !important;" width="200" height="" alt="Arasaka-Text-Logo"></a>
                                                         </th>
                                                     </tr>
                                                 </table>
@@ -288,7 +288,7 @@
                                                     <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                         <tr>
                                                             <!-- image -->
-                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="Arasaka-Laptop-Hero.png" border="0" style="display:block; margin:0px auto; max-width:600px !important;" width="600" height="" alt="Futuristic looking laptop with neon colors and lights"></a>
+                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/Arasaka-Laptop-Hero.png" border="0" style="display:block; margin:0px auto; max-width:600px !important;" width="600" height="" alt="Futuristic looking laptop with neon colors and lights"></a>
                                                             </th>
                                                         </tr>
                                                     </table>
@@ -407,7 +407,7 @@
                                                                             <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                                                 <!-- image -->
                                                                                 <tr>
-                                                                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="clothier.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
+                                                                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/clothier.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
                                                                                     </th>
                                                                                 </tr>
                                                                             </table>
@@ -454,7 +454,7 @@
                                                                             <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                                                 <!-- image -->
                                                                                 <tr>
-                                                                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="clothier (1).png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
+                                                                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/clothier (1).png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="AltTextHere"></a>
                                                                                     </th>
                                                                                 </tr>
                                                                             </table>
@@ -560,7 +560,7 @@
                                                     <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                         <!-- logo -->
                                                         <tr>
-                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_LogoName_image" alias="Footer_LogoName_image"><img class="m-width--100p" src="Arasaka-Text-Logo.png" border="0" style="display:block; margin:0px auto; max-width:150px !important;" width="150" height="" alt="AltTextHere"></a>
+                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_LogoName_image" alias="Footer_LogoName_image"><img class="m-width--100p" src="img/Arasaka-Text-Logo.png" border="0" style="display:block; margin:0px auto; max-width:150px !important;" width="150" height="" alt="AltTextHere"></a>
                                                             </th>
                                                         </tr>
                                                         <!-- text -->
@@ -588,17 +588,17 @@
                                                     <table class="m-float--center" width="" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="margin: 0px auto;">
                                                         <tr>
                                                             <!-- col 1 -->
-                                                            <th class="" width="40" align="center" border="0" style="width: 40px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="FB-Black-Circle-Logo-WhiteBG.png" border="0" style="display:block; margin:0px auto; max-width:40px !important;" width="40" height="" alt="AltTextHere"></a>
+                                                            <th class="" width="40" align="center" border="0" style="width: 40px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="img/FB-Black-Circle-Logo-WhiteBG.png" border="0" style="display:block; margin:0px auto; max-width:40px !important;" width="40" height="" alt="AltTextHere"></a>
                                                             </th>
                                                             <!-- spacer -->
                                                             <th class="" width="40" align="center" border="0" style="width:40px; padding:0px 0px 0px 0px; text-align:center; vertical-align: top;">&nbsp;</th>
                                                             <!-- col 2 -->
-                                                            <th class="" width="40" align="center" border="0" style="width: 40px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="Twitter-Black-Circle-Logo-WhiteBG.png" border="0" style="display:block; margin:0px auto; max-width:40px !important;" width="40" height="" alt="AltTextHere"></a>
+                                                            <th class="" width="40" align="center" border="0" style="width: 40px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="img/Twitter-Black-Circle-Logo-WhiteBG.png" border="0" style="display:block; margin:0px auto; max-width:40px !important;" width="40" height="" alt="AltTextHere"></a>
                                                             </th>
                                                             <!-- spacer -->
                                                             <th class="" width="40" align="center" border="0" style="width:40px; padding:0px 0px 0px 0px; text-align:center; vertical-align: top;">&nbsp;</th>
                                                             <!-- col 3 -->
-                                                            <th class="" width="40" align="center" border="0" style="width: 40px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="LinkedIn-Black-Circle-Logo-WhiteBG.png" border="0" style="display:block; margin:0px auto; max-width:40px !important;" width="40" height="" alt="AltTextHere"></a>
+                                                            <th class="" width="40" align="center" border="0" style="width: 40px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="img/LinkedIn-Black-Circle-Logo-WhiteBG.png" border="0" style="display:block; margin:0px auto; max-width:40px !important;" width="40" height="" alt="AltTextHere"></a>
                                                             </th>
                                                         </tr>
                                                     </table>
