--- a/ArasakaEmail.html
+++ b/ArasakaEmail.html
@@ -22,7 +22,7 @@
     </style>
 
     <!-- ## Assistive Technology and Browser Tabs ## -->
-    <title>Custom Template</title>
+    <title>Arasaka Tech</title>
 
     <!-- ## Fonts ## -->
     <!-- link: loads as code loads (preferred); import: loads after page loads -->
