--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
     		<div class="row">
     			<div class="col-md-6">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center w-100" style="background-image: url(Araska-Thumbnail.png);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center w-100" style="background-image: url(img/Araska-Thumbnail.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 							<h3><a href="https://felixzavala.com/ArasakaEmail.html" target="_blank">HTML Email</h3>
