--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 					<div class="text">
 						
-					  <h1 class="mb-4 mt-3">I'm a <span>web developer</span> based in Texas</h1>
+					  <h1 class="mb-4 mt-3">I'm an <span>email developer</span> based in Texas</h1>
 					 
 				  </div>
 				</div>
